--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="navbar-brand fs-2 fw-bold logo p-0 m-0" href="#"><span class="fs-1 fw-bold"><span class="fs-1 fw-bold text-success">T</span>ech<span class="fs-1 fw-bold text-success">B</span>log</a>
           <div class="text-end me-5 d-none d-lg-block">
             <a href="/posts/login.html"> <button type="button" class="btn btn-outline-success text-dark border border-2 fw-bold me-2 shadow-none">Login</button> </a>
-            <a href="/posts/signup.html"> <button type="button" class="btn btn- border border-2 bg-success fw-bold dim-on-hover shadow-none">Sign Up</button> </a>
+            <a href="posts/signup.html"> <button type="button" class="btn btn- border border-2 bg-success fw-bold dim-on-hover shadow-none">Sign Up</button> </a>
           </div>
           <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"> 
             <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
             </div>
             <div class="text-center">
               <button type="button" class="btn btn-outline-success text-dark border border-2 fw-bold me-2 shadow-none">Login</button>
-              <a href="/posts/signup.html"> <button type="button" class="btn btn- border border-2 bg-success fw-bold dim-on-hover shadow-none">Sign Up</button> </a>
+              <a href="posts/signup.html"> <button type="button" class="btn btn- border border-2 bg-success fw-bold dim-on-hover shadow-none">Sign Up</button> </a>
 
             </div>
             <div class="offcanvas-body">
@@ -283,7 +283,7 @@
                 
                 <div class="d-flex flex-column text-danger fw-bold">
                   <p class="mx-auto">Sign up to access the full article.</p>
-                  <a class="mx-auto" href="/posts/signup.html"><button class="btn btn-success w-auto mx-auto">Sign Up</button></a>
+                  <a class="mx-auto" href="posts/signup.html"><button class="btn btn-success w-auto mx-auto">Sign Up</button></a>
               </div>
               
               </div>
